# radiology-metadata

./: README.md  pyproject.toml
BIDS/: convert.sh  import_dicom.py  pick_dicom.py
MI-CDM/: README.md  dicom_to_omop1.py  make_imaging_procedures.py  mapping.md  omop.py  person_id.py
MI-CDM/mappings/: ModalitiesInStudy2omop.csv  PartDesc2omop.csv  StudyDescription_procedure2omop.csv
doc/: README.md
docker/: Dockerfile  Dockerfile_add_user  README.md  add_user.sh  build.sh
explore/: README.md  summarise_image_metadata.py  summarise_series_metadata.py  summarise_study_metadata.py
index_dicom/: README.md  dicom_fields_dirs.txt  dicom_fields_files_instance.txt  dicom_fields_files_series.txt  dicom_fields_files_study.txt  index_dicom.py  index_dicom_dirs.py  index_dicom_files.py  index_years.sh
query_pacs/: README.md  jsonl2csv.py  parse_query_stats.py  query.py  query_config.toml  query_definitions.py  query_images_by_month.sh  query_series_by_month.sh  query_studies_by_year.sh
query_pacs/wip/: pull_images.py  pull_images_entrypoint.sh  store_images.py  store_images_entrypoint.sh
