[project]
name = "rad-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.38.0",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "pickleshare>=0.7.5",
    "pyarrow>=23.0.0",
    "pyarrow-stubs>=20.0.0.20251215",
    "pydantic-settings>=2.13.1",
    "pydicom>=3.0.1",
    "pynetdicom>=3.0.4",
    "tqdm>=4.67.3",
    "types-tqdm>=4.67.3.20260205",
]
